[package]
name = "gui-transfer-sol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.4.1"
transfer_one_sol = { path = "./transfer_sol", features = ["no-entrypoint"] }
shellexpand = "2.1.0"
anchor-client = { version = "0.26.0", features = ["debug"] }
serde_json = "1.0.94"
serde = "1.0.158"
tokio = "1.26.0"
